--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="index.css">
-<title>Design search Button</title>
+<title>What To Eat</title>
 </head>
 <body>
 <!-- search form 6 -->
