--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="/restaurant.js"></script>
 <link rel="stylesheet" type="text/css" href="index.css">
 <title>What To Eat</title>
 </head>
