--- a/restaurant.html
+++ b/restaurant.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./jquery-csv.js"></script>
+    <script type="text/javascript" src="./restaurant.js"></script>
+    <input type = "file" id="csvFileInput" accept=".csv">
     <title>What to Eat</title>
     <link rel="stylesheet" href="style-restaurant.css">
   </head>
-  <body>
+  <body >
     <header>
       <div class="container">
         <div id="branding">
@@ -23,7 +27,7 @@
     <section id="showcase">
       <div class="container">
         <h1>Top 10 Restaurant Items</h1>
-            <ul>
+            <!--<ul>
                 <li>1.</li>
                 <li>2.</li>
                 <li>3.</li>
@@ -34,9 +38,11 @@
                 <li>8.</li>
                 <li>9.</li>
                 <li>10.</li>
-            </ul>
+            </ul> -->
       </div>
     </section>
+
+    <button onclick="getData()" id="test"> Click Me! </button>
 
    
 
