Finished javascript index

--- a/restaurant.html
+++ b/restaurant.html
@@ -30,7 +30,7 @@
       </div>
     </section>
 
-    <button onclick="getData()" id="test"> Click Me! </button>
+    <!-- <button onclick="getData()" id="test"> Click Me! </button> -->
     <footer>
       <p>IEOR 135 SP18</p>
     </footer>
