--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="./restaurant.js"></script>
-<link rel="stylesheet" type="text/css" href="index.css">
-<title>What To Eat</title>
-</head>
-<body>
-<!-- search form 6 -->
-<div class="button_box2">
-<form class="form-wrapper-2 cf">
-<input type="text" placeholder="Search here..." required>
-<button type="submit">Search</button>
-</form>
-</div>
-</body>
+	<head>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="./jquery-csv.js"></script>
+		<script type="text/javascript" src="./index.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<title>What To Eat</title>
+	</head>
+	<body>
+	<!-- search form 6 -->
+		<div class="button_box2">
+			<form id="searchBar" class="form-wrapper-2 cf" action="http://localhost:8000/restaurant.html" onsubmit="return searchName()">
+				<input id="restaurantName" type="text" placeholder="Search here..." required>
+				<input type="submit" value='Submit'>
+			</form>
+		</div>
+	</body>
 </html>
