--- a/restaurant.html
+++ b/restaurant.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./jquery-csv.js"></script>
     <script type="text/javascript" src="./restaurant.js"></script>
     <title>What to Eat</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style-restaurant.css">
   </head>
   <body>
@@ -23,10 +25,10 @@
       </div>
     </header>
 
-    <section id="showcase">
-      <div class="container">
-        <h1>Top 10 Restaurant Items</h1>
-          <table id="tableView"></table>
+    <section>
+      <div id="tableView" class="container">
+        <h1 id="restaurantName"></h1>
+            <!-- <table class="table table-striped table-hover" id="tableView"></table> -->
       </div>
     </section>
     <footer>
