--- a/index.html
+++ b/index.html
@@ -74,75 +74,42 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/developers-1.jpg" alt="">
               <h5>Albert Phone</h5>
-              <p class="font-weight-light mb-0">"I suk!"</p>
+              <p class="font-weight-light mb-0">"Failure Will Never Overtake Me If My Determination To Succeed Is Strong Enough"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/developers-2.jpg" alt="">
               <h5>Emilie Gao</h5>
               <p class="font-weight-light mb-0">"Taking on life with an open mind and a positive attitude"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/developers-3.jpg" alt="">
               <h5>Mike Wang</h5>
-              <p class="font-weight-light mb-0">"poopy but hole!"</p>
+              <p class="font-weight-light mb-0">"We May Encounter Many Defeats But We Must Not Be Defeated."</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="img/developers-4.jpg" alt="">
+              <h5>Christine Lee</h5>
+              <p class="font-weight-light mb-0">"We Generate Fears While We Sit. We Overcome Them By Action."</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="img/developers-5.jpg" alt="">
+              <h5>Justin Jeong</h5>
+              <p class="font-weight-light mb-0">"Reading Is To The Mind, As Exercise Is To The Body."</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="footer bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-            <ul class="list-inline mb-2">
-              <li class="list-inline-item">
-                <a href="#">About</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Contact</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-            </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
-          </div>
-          <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item mr-3">
-                <a href="#">
-                  <i class="fa fa-facebook fa-2x fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item mr-3">
-                <a href="#">
-                  <i class="fa fa-twitter fa-2x fa-fw"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-instagram fa-2x fa-fw"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
