added home feature

--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="overflow: hidden;">
   <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -13,7 +13,7 @@
   <body>
     <header>
       <body>
-        <img src="./img/banner.png" alt="What To Eat Banner" style="display:block; margin-left:auto; margin-right:auto;"/>
+        <img src="./img/banner.png" alt="What To Eat Banner" onclick="home()" style="display:block; margin-left:auto; margin-right:auto;"/>
       </body>
     </header>
 
