added footer logo

--- a/restaurant.html
+++ b/restaurant.html
@@ -24,7 +24,7 @@
       </div>
     </section>
     <footer>
-      <p class="fa-1x">IEOR 135 SP18</p>
+      <img src="./img/logo.png" alt="What To Eat Logo" style="display:block; margin-left:auto; margin-right:auto; width:3%">
     </footer>
   </body>
 </html>
