--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
     <link href="css/landing-page.min.css" rel="stylesheet">
     
   </head>
-
+  <header style= "background:#E5504C; padding-top:7px; padding-bottom:7px">
+    <body>
+      <img src="./img/banner.png" alt="What To Eat Banner" style="display:block; margin-left:auto; margin-right:auto; width:40%; verticle-align:middle; "/>
+    </body>
+  </header>
   <body>
     <!-- Masthead -->
     <header class="masthead text-white text-center">
@@ -118,6 +122,8 @@
     <script src="./jquery-csv.js"></script>
     <script type="text/javascript" src="./index.js"></script>
 
+    <footer style= "background:#E5504C; max-height:70px;">
+      <font color="white"> <center> <p>IEOR 135 SP18</p></center></font>
+    </footer>
   </body>
-
 </html>
