added zuck and bottom logo

--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
               <p class="font-weight-light mb-0">"Reading Is To The Mind, As Exercise Is To The Body."</p>
             </div>
           </div>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="img/developers-6.jpg" alt="">
+              <h5>Mark</h5>
+              <p class="font-weight-light mb-0">"helo"</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -122,8 +129,8 @@
     <script src="./jquery-csv.js"></script>
     <script type="text/javascript" src="./index.js"></script>
 
-    <footer style= "background:#E5504C; max-height:70px;">
-      <font color="white"> <center> <p>IEOR 135 SP18</p></center></font>
+    <footer style= "background:#E5504C; max-height:70px; padding-top:7px; padding-bottom:7px">
+      <img src="./img/logo.png" alt="What To Eat Logo" style="display:block; margin-left:auto; margin-right:auto; width:2%">
     </footer>
   </body>
 </html>
