--- a/restaurant.html
+++ b/restaurant.html
@@ -19,7 +19,7 @@
 
     <section>
       <div id="tableView" class="container">
-        <h1 id="restaurantName" class="fa-3x"></h1>
+        <h1 id="restaurantName"></h1>
             <!-- <table class="table table-striped table-hover" id="tableView"></table> -->
       </div>
     </section>
