fixed modal bug

--- a/restaurant.html
+++ b/restaurant.html
@@ -25,7 +25,7 @@
       <div class="modal-content">
         <div class="modal-header" style="height:60px;position:relative;width:100%;background-color:#E5504C">
             <button type="button" style="color:#ffffff" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-            <h4 style="color:#ffffff">Reviews</h4>
+            <h4 id="dishName" style="color:#ffffff">Review for</h4>
         </div>
         <div id="orderDetails" class="modal-body"></div>
       </div>
